--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             </div>
           </div>
         </div>
-      </section>-->
+      </section>
       
       <footer class="ftco-footer ftco-bg-dark ftco-section">
         <div class="container">
